--- a/package.json
+++ b/package.json
@@ -10,11 +10,16 @@
   },
   "dependencies": {
     "@vercel/speed-insights": "^1.0.10",
+    "express": "^4.18.3",
+    "multer": "^1.4.5-lts.1",
     "next": "14.1.0",
+    "next-connect": "^1.0.0",
     "react": "^18",
     "react-dom": "^18"
   },
   "devDependencies": {
+    "@types/express": "^4.17.21",
+    "@types/multer": "^1.4.11",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
