--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,6 +4,8 @@
     "allowJs": true,
     "skipLibCheck": true,
     "strict": true,
+    "strictNullChecks": false, 
+    "strictFunctionTypes": false ,
     "noEmit": true,
     "esModuleInterop": true,
     "module": "esnext",
