--- a/package.json
+++ b/package.json
@@ -10,8 +10,10 @@
   },
   "dependencies": {
     "@vercel/speed-insights": "^1.0.10",
+    "dotenv": "^16.4.5",
     "express": "^4.18.3",
     "multer": "^1.4.5-lts.1",
+    "mysql2": "^3.9.2",
     "next": "14.1.0",
     "next-connect": "^1.0.0",
     "react": "^18",
