--- a/package.json
+++ b/package.json
@@ -17,8 +17,10 @@
     "axios": "^1.6.7",
     "dotenv": "^16.4.5",
     "express": "^4.18.3",
+    "formidable": "^3.5.1",
     "multer": "^1.4.5-lts.1",
     "multer-s3": "^3.0.1",
+    "multiparty": "^4.2.3",
     "mysql2": "^3.9.2",
     "next": "14.1.0",
     "next-connect": "^1.0.0",
@@ -28,6 +30,8 @@
   },
   "devDependencies": {
     "@types/express": "^4.17.21",
+    "@types/formidable": "^3.4.5",
+    "@types/multiparty": "^0.0.36",
     "@types/next": "^9.0.0",
     "@types/node": "^20",
     "@types/react": "^18",
