--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "mysql2": "^3.9.2",
     "next": "14.1.0",
     "next-connect": "^1.0.0",
+    "nodemailer": "^6.9.13",
     "react": "^18",
     "react-dom": "^18",
     "zod": "^3.22.4"
